Add in-app notifications feature
Add a socket.io connection provider
Add a truncate util function
Add notification types and model
Add notification repository, controller, and service
